# game-1

./: .gitignore  README.org  flake.nix  shell.nix
scripts/: formatting-check.sh
src/: LICENSE  default.nix  game1.cabal  game1.nix  hie.yaml
src/app/: Main.hs
src/assets/: 4  map.txt
src/lib/: Game1.hs  GameState.hs  Paths_game1.hs
src/lib/Game1/: GameState.hs  Input.hs  Map.hs  Player.hs  Render.hs  Resources.hs  Scene.hs  Window.hs
