cabal-version:      2.4

name:               game1
version:            0.1.0.0
author:             Erik Bäckman
copyright:          2021 Erik Bäckman
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  LICENSE
Data-Files: assets/box.png

library
  hs-source-dirs: lib
  exposed-modules:
    Game1
    Game1.GameState
    Game1.Resources
    Game1.Input
  other-modules: Paths_game1
  build-depends:
    base,
    sdl2,
    sdl2-image,
    text,
    mtl,
    extra,
    lens
  default-language: Haskell2010
  default-extensions:
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    OverloadedStrings
    RecordWildCards
    MultiWayIf

executable game1
  main-is:             Main.hs
  other-modules: Paths_game1
  build-depends:
    base,
    sdl2,
    sdl2-image,
    text,
    mtl,
    extra,
    paths,
    directory,
    file-embed,
    bytestring,
    game1

  hs-source-dirs: app
  default-language:    Haskell2010
  default-extensions:
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    OverloadedStrings
    RecordWildCards
    MultiWayIf
