cabal-version:      2.4

name:               game1
version:            0.1.0.0
author:             Erik Bäckman
copyright:          2021 Erik Bäckman
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  LICENSE
Data-Files: axssets/box.png

library
  hs-source-dirs: lib
  exposed-modules:
    Game1
    Game1.GameState
    Game1.Input
    Game1.Player
    Game1.Render
    Game1.Resources
    Game1.Scene
    Game1.Window
    Game1.Map
  other-modules: Paths_game1
  build-depends:
    -- sdl2-gfx,
    base,
    extra,
    lens,
    linear,
    mtl,
    sdl2,
    sdl2-image,
    sdl2-ttf,
    text,
    containers
  default-language: Haskell2010
  ghc-options:
    -fwarn-unused-imports
    -Wno-missing-home-modules
    -O2
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

executable game1
  main-is:             Main.hs
  other-modules:
    Paths_game1
  build-depends:
    base,
    bytestring,
    directory,
    extra,
    file-embed,
    game1,
    mtl,
    paths,
    sdl2,
    sdl2-image,
    text

  hs-source-dirs: app
  default-language:    Haskell2010
  ghc-options:
    -fwarn-unused-imports
    -Wno-missing-home-modules
    -O2
    -threaded
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
